[package]
name = "ptt"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
description = "PlainText Template utility - CLI to fill in plaintext templates"
repository = "https://www.github.com/ChrisDavison/ptt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
shellexpand = "1.0.0"
hmac-sha256 = "0.1.2"
