[package]
name = "ptt"
version = "0.7.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
description = "PlainText Template utility - Quickly clone templates to current location"
repository = "https://www.github.com/ChrisDavison/ptt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "1.0.0"
chrono = "0.4.0"
