[package]
name = "ptt"
version = "0.8.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
description = "PlainText Template utility - Quickly clone templates to current location"
repository = "https://www.github.com/ChrisDavison/ptt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "1.0.0"
chrono = "0.4.0"
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
indexmap = "1.9.1"
